--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Twqa</title>
 
   <%= stylesheet_link_tag "qa" %>
+  <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "jquery-1.7" %>
   <%= javascript_include_tag "shuffle" %>
   <%= javascript_include_tag "mustache" %>
