--- a/app/views/layouts/offline_application.html.erb
+++ b/app/views/layouts/offline_application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Twqa</title>
   <link href="/assets/qa.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/assets/application.css" media="screen" rel="stylesheet" type="text/css" />
   <script src="/assets/jquery-1.7.js" type="text/javascript"></script>
   <script src="/assets/shuffle.js" type="text/javascript"></script>
   <script src="/assets/mustache.js" type="text/javascript"></script>
