Add extra cities for registration : Jarrod

--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -10,9 +10,9 @@
 			<%= f.input :last_name %>
 			<%= f.input :email %>
 			<%= f.input :mobile_number %>
-			<%= f.input :city, :as => :select, :collection => ['Melbourne','Brisbane','Sydney','Perth','Other'] , :include_blank => false %>
+			<%= f.input :city, :as => :select, :collection => PlayerHelper::cities, :include_blank => false %>
 			<%= f.input :company_name %>
-			<%= f.input :role, :as => :select, :collection => ['CIO/CTO','CXO Other','VP','Director','Manager','Technologist','Developer','Consultant','Other'], :include_blank => false%>
+			<%= f.input :role, :as => :select, :collection => PlayerHelper::roles, :include_blank => false%>
 			<%= f.actions do %>
 				<%= f.action :submit, :label => 'Register' %>
 			<% end %>
