--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -5,6 +5,8 @@
       <img src="/assets/line.png" alt="" />
 	</div>
 
+		<div id="counter"></div>
+		
     <div id="questions">
     </div>
 
@@ -13,6 +15,7 @@
       <div class="alert-actions">
         <a class="btn small" href="#">Play again</a>
       </div>
+			<p class="timing"></p>
     </div>
 
     <div id="lose" class="alert-message block-message error">
@@ -20,6 +23,7 @@
       <div class="alert-actions">
         <a class="btn small" href="#">Play again</a>
       </div>
+			<p class="timing"></p>
     </div>
 
   </div>
