--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   <%= javascript_include_tag "jquery-1.7" %>
   <%= javascript_include_tag "mustache" %>
   <%= javascript_include_tag "shuffle" %>
+	<%= javascript_include_tag "timer" %>
+	<%= javascript_include_tag "flipify" %>
 	<%= javascript_include_tag "qa" %>
   <%= csrf_meta_tags %>
 
