--- a/app/views/layouts/offline_application.html.erb
+++ b/app/views/layouts/offline_application.html.erb
@@ -7,6 +7,8 @@
   <script src="/assets/jquery-1.7.js" type="text/javascript"></script>
   <script src="/assets/shuffle.js" type="text/javascript"></script>
   <script src="/assets/mustache.js" type="text/javascript"></script>
+  <script src="/assets/timer.js" type="text/javascript"></script>
+  <script src="/assets/flipify.js" type="text/javascript"></script>
   <script src="/assets/qa.js" type="text/javascript"></script>
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes" />
