--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -14,7 +14,7 @@
 			<%= f.input :company_name %>
 			<%= f.input :role, :as => :select, :collection => PlayerHelper::roles, :include_blank => false%>
 			<%= f.actions do %>
-				<%= f.action :submit, :label => 'Register' %>
+				<%= f.action :submit, :label => 'Register', :button_html => {:class => 'btn large'} %>
 			<% end %>
 				 
 		<% end %>
