--- a/app/views/welcome/welcome.html.erb
+++ b/app/views/welcome/welcome.html.erb
@@ -5,12 +5,15 @@
       <img src="/assets/line.png" alt="" />
 		</div>
 
-    <div>
+    <div id="welcome">
 			<div class="options">
 				<ol class="choices">
 					<li>
 				  	<%= link_to 'Register to Play', new_player_path, {:class => 'btn large primary'} %>
 			  	</li>
+					<li>
+	  				<%= link_to 'Already registered? Click here to login', registered_path, {:id => 'welcome'} %>
+					</li>
 				</ol>
 			</div>
 			<br />
