Add a link to register if you are trying to login : Jarrod

--- a/app/views/welcome/registered.html.erb
+++ b/app/views/welcome/registered.html.erb
@@ -14,6 +14,10 @@
 					<% end %>
 				<% end %>
 				
+				<br />
+				
+ 				<%= link_to 'Not registered? Click here to register', root_path, {:id => 'welcome'} %>
+
 			</div>
 			<br />
 			<br />
