--- a/app/views/welcome/welcome.html.erb
+++ b/app/views/welcome/welcome.html.erb
@@ -5,7 +5,7 @@
       <img src="/assets/line.png" alt="" />
 		</div>
 
-    <div id="welcome">
+    <div>
 			<div class="options">
 				<ol class="choices">
 					<li>
