--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Report</h1>
 
-<%= link_to "Player report", :controller => "reports", :action => "download" %>
+<%= link_to "Player report", reports_download_path, {:class => "download_link"} %>
