Make player id available in question area : Jarrod

--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -1,3 +1,4 @@
+<div id="player_id" style="display:none;"><%= @player_id %></div>
 <div class="container">
   <div class="content">
     <div class="page-header">
