Add some standard structure to leaderboard : JArrod

--- a/app/views/leaderboards/players.html.erb
+++ b/app/views/leaderboards/players.html.erb
@@ -1,5 +1,12 @@
 <meta http-equiv="refresh" content="30" >
+<div class="container">
+  <div class="content">
+    <div class="page-header">
+      <img src="/assets/message.png" alt="Answer 3 questions correctly for your chance to win an immediate prize and get into the draw to win one of 2 apple TVs or a Kindle" />
+      <img src="/assets/line.png" alt="" />
+	</div>
 
+<div class="options">
 <h1>Leaderboard</h1>
 <table id="player_leaderboard">
   <tr>
@@ -19,3 +26,9 @@
   <% end %>
 </table>
 
+</div>
+</div>
+<footer>
+  <p>&copy; ThoughtWorks 2011</p>
+</footer>
+</div>
