--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -6,7 +6,7 @@
       <img src="/assets/line.png" alt="" />
 	</div>
 
-		<div id="counter"></div>
+		<div id="clock"></div>
 		
     <div id="questions">
     </div>
