--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -15,14 +15,16 @@
       <p>Congratulations! You win!</p>
       <div class="alert-actions">
         <a class="btn small" href="#">Play again</a>
-      </div>
+				<a class="btn small" href="/">Quit</a>
+			</div>
     </div>
 
     <div id="lose" class="alert-message block-message error">
       <p>Sorry, you didn't win this time.</p>
       <div class="alert-actions">
         <a class="btn small" href="#">Play again</a>
-      </div>
+				<a class="btn small" href="/">Quit</a>
+			</div>
     </div>
 
   </div>
