Show leaderboard position on winning answers : Jarrod

--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -12,7 +12,8 @@
     </div>
 
     <div id="win" class="alert-message block-message success">
-      <p>Congratulations! You win!</p>
+      <p>You win! Contact ThoughtWorks staff to get your prize.</p>
+			<p id="leaderboard-position"></p>
       <div class="alert-actions">
         <a class="btn small" href="#">Play again</a>
 				<a class="btn small" href="/">Quit</a>
