--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -4,12 +4,11 @@
     <div class="page-header">
       <img src="/assets/message.png" alt="Answer 3 questions correctly for your chance to win an immediate prize and get into the draw to win one of 2 apple TVs or a Kindle" />
       <img src="/assets/line.png" alt="" />
-	</div>
+    </div>
 
 		<div id="clock"></div>
 
-    <div id="questions">
-    </div>
+    <div id="questions"> </div>
 
     <div id="win" class="alert-message block-message success">
       <p>You win! Contact ThoughtWorks staff to get your prize.</p>
@@ -26,6 +25,10 @@
         <a class="btn small" href="#">Play again</a>
 				<a class="btn small" href="/">Quit</a>
 			</div>
+
+      <div id="incorrect_questions">
+        <h2>The correct answer:</h2>
+      </div>
     </div>
 
   </div>
