ps #8: spell check

--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -27,7 +27,7 @@
 			</div>
 
       <div id="incorrect_questions">
-        <h2>The correct answer:</h2>
+        <h2>The correct answers:</h2>
       </div>
     </div>
 
