ps #13: record the attempted questions at the end of each game

--- a/app/assets/stylesheets/qa.css
+++ b/app/assets/stylesheets/qa.css
@@ -30,7 +30,7 @@ div.options {
 	padding: 0;
 }
 
-#win, #lose, .question, .answer {
+#win, #lose, .question, .answer, .question_id{
   display: none;
 }
 
