ps: moved the page-header and footer to application layout, instead of having them on every page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,21 @@
 
 </head>
 <body>
+  <div class="container">
+    <div class="content">
 
-<%= yield %>
+      <div class="page-header">
+        <img src="/assets/twlogo.png" alt="Thoughtworks" />
+        <img src="/assets/purplr_double_line.png" alt="" />
+      </div>
 
+      <%= yield %>
+
+      <footer>
+        <p>&copy; ThoughtWorks 2012</p>
+      </footer>
+
+    </div>
+  </div>
 </body>
 </html>
