--- a/app/views/welcome/welcome.html.erb
+++ b/app/views/welcome/welcome.html.erb
@@ -2,11 +2,9 @@
 	<div class="options">
 		<ol class="choices">
 			<li>
-		  	<%= link_to 'Register to Play', new_player_path, {:class => 'btn large primary'} %>
-	  	</li>
-			<li>
+		  	<%= link_to 'Register to play', new_player_path, {:class => 'btn large primary'} %>
 				<%= link_to 'Already registered? Click here to login', registered_path, {:id => 'welcome'} %>
-			</li>
+	  	</li>
 		</ol>
 	</div>
 	<br />
