--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,13 +1,15 @@
-<%= semantic_form_for @player do |f| %>
-	<%= f.input :first_name %>
-	<%= f.input :last_name %>
-	<%= f.input :email, :as => :email %>
-	<%= f.input :mobile_number %>
-	<%= f.input :city, :as => :select, :collection => PlayerHelper::cities, :include_blank => false %>
-	<%= f.input :company_name %>
-	<%= f.input :role, :as => :select, :collection => PlayerHelper::roles, :include_blank => false%>
-	<%= f.actions do %>
-		<%= f.action :submit, :label => 'Register', :button_html => {:class => 'btn large'} %>
-	<% end %>
+<div class="register_form">
+  <%= semantic_form_for @player do |f| %>
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
+    <%= f.input :email, :as => :email %>
+    <%= f.input :mobile_number %>
+    <%= f.input :city, :as => :select, :collection => PlayerHelper::cities, :include_blank => false %>
+    <%= f.input :company_name %>
+    <%= f.input :role, :as => :select, :collection => PlayerHelper::roles, :include_blank => false%>
+    <%= f.actions do %>
+      <%= f.action :submit, :label => 'Register', :button_html => {:class => 'btn large'} %>
+    <% end %>
 
-<% end %>
+  <% end %>
+</div>
