--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -5,22 +5,30 @@
 <div id="questions"> </div>
 
 <div id="win" class="alert-message block-message success">
-  <p>You win! Contact ThoughtWorks staff to get your prize.</p>
-	<p id="leaderboard-position"></p>
-  <div class="alert-actions">
-    <a class="btn small" href="#">Play again</a>
-		<a class="btn small" href="/">Quit</a>
-	</div>
+  
+<span class="result">You win!</span>
+  <img src="/assets/happy_face.png"  align='middle' />
+<div>
+  <p>Please contact a ThoughtWorker to collect your prize.</p>
+  <p id="leaderboard-position"></p>
+</div>
 </div>
 
 <div id="lose" class="alert-message block-message error">
-  <p>Sorry, you didn't win this time.</p>
-  <div class="alert-actions">
-    <a class="btn small" href="#">Play again</a>
-		<a class="btn small" href="/">Quit</a>
-	</div>
-
-  <div id="incorrect_questions">
-    <h2>The correct answers:</h2>
+  	
+	<span class="result">Sorry, you didn't win this time.</span>
+	<img src="/assets/sad_face.png" align='middle' />
+	
+<div id="incorrect_questions">
+    <p>The correct answers:</p>
   </div>
+
+
+  
+</div>
+<div id="alert-actions" class="clearfix">
+	<div class="center">
+    <a class="btn small play" href="#">Play again</a>
+		<a class="btn small quit" href="/">Quit</a>
+	</div>
 </div>
