--- a/app/views/welcome/registered.html.erb
+++ b/app/views/welcome/registered.html.erb
@@ -1,17 +1,18 @@
 <div>
-	<div class="options">
+
+  <div id="login" class="register_form center">
 		<%= semantic_form_for @player, :url => registered_login_path do |f| %>
 			<%= f.input :email %>
 			<%= f.actions do %>
-				<%= f.action :submit, :label => 'Play', :button_html => {:class => 'btn small'} %>
+				<%= f.action :submit, :label => 'Play', :button_html => {:class => 'btn large'} %>
 			<% end %>
 		<% end %>
+  </div>
 
-		<br />
-
+  <div class="center">
 		<%= link_to 'Not registered? Click here to register', root_path, {:id => 'welcome'} %>
+  </div>
 
-	</div>
 	<br />
 	<br />
 </div>
