--- a/app/views/welcome/welcome.html.erb
+++ b/app/views/welcome/welcome.html.erb
@@ -1,4 +1,7 @@
 <div>
+  <div id="instruction_box" class="center">
+    <img src="/assets/instructions.png" />
+  </div>
   <div class="center">
     <%= link_to 'Register to play', new_player_path, {:class => 'btn large'} %>
     <%= link_to 'Already registered? Click here to login', registered_path, {:id => 'welcome'} %>
