--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <div class="content">
 
       <div class="page-header">
-        <img src="/assets/twlogo.png" alt="Thoughtworks" />
+        <img src="/assets/logo.png" alt="Thoughtworks" />
         <img src="/assets/purplr_double_line.png" alt="" />
       </div>
 
