--- a/app/assets/stylesheets/qa.css
+++ b/app/assets/stylesheets/qa.css
@@ -32,6 +32,10 @@ body {
   text-align: center;
 }
 
+.page-header img.logo_small {
+  width: 315px;
+}
+
 div#questions {
 	padding: 10px 20px 20px 30px;
 }
