--- a/app/assets/stylesheets/qa.css
+++ b/app/assets/stylesheets/qa.css
@@ -84,9 +84,16 @@ div.options {
   font-weight: bold;
 }
 
+.button_at_middle {
+  width: 315px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .btn.large {
+  display: table-cell;
+  vertical-align: middle;
   color: #FFFFFF;
-  padding-top: 22px;
   margin: 0px auto;
   font-size: 25px;
   height: 70px;
