--- a/app/views/welcome/welcome.html.erb
+++ b/app/views/welcome/welcome.html.erb
@@ -2,8 +2,10 @@
   <div id="instruction_box" class="center">
     <img src="/assets/instructions.png" />
   </div>
-  <div class="center">
+  <div class="button_at_middle">
     <%= link_to 'Register to play', new_player_path, {:class => 'btn large'} %>
+  </div>
+  <div class="center">
     <%= link_to 'Already registered? Click here to login', registered_path, {:id => 'welcome'} %>
   </div>
 	<br />
