--- a/app/views/layouts/leaderboard.html.erb
+++ b/app/views/layouts/leaderboard.html.erb
@@ -4,6 +4,7 @@
   <title>Leaderboard</title>
 
   <%= stylesheet_link_tag "qa" %>
+  <%= stylesheet_link_tag "application" %>
   <%= stylesheet_link_tag "leaderboard" %>
   <%= javascript_include_tag "jquery-1.7" %>
   <%= csrf_meta_tags %>
