ps: cleanup leaderboard.css

--- a/app/views/layouts/leaderboard.html.erb
+++ b/app/views/layouts/leaderboard.html.erb
@@ -13,7 +13,7 @@
 
   <div class="container">
     <div class="content">
-      <div class="page-header_leaderboard">
+      <div class="page-header">
         <img class="logo_large" src="/assets/twlogo_large.png" alt="Thoughtworks" />
         <img src="/assets/purple_double_line_300ppi.png" alt="" />
       </div>
