--- a/app/views/leaderboards/players.html.erb
+++ b/app/views/leaderboards/players.html.erb
@@ -1,6 +1,6 @@
 <meta http-equiv="refresh" content="30">
 
-  <p class="leaderboard_title">Leaderboard</p>
+  <p class="title">Leaderboard</p>
   <table id="player_leaderboard">
     <tr>
       <th>Rank #</th>
