--- a/app/assets/stylesheets/qa.css
+++ b/app/assets/stylesheets/qa.css
@@ -28,6 +28,13 @@
   width: 315px;
 }
 
+#instruction_box img {
+  padding-left: 15px;
+  padding-bottom: 30px;
+  margin-top: -30px;
+  background-color: #FFFFFF;
+}
+
 div#questions {
 	padding: 10px 20px 20px 30px;
 }
@@ -98,6 +105,7 @@ div.options {
 .btn.answer {
   display: table-cell;
   vertical-align: middle;
+  padding: 0px 10px;
   height: 93px;
   width: 400px;
   color: black;
@@ -148,6 +156,7 @@ a#welcome {
 	color: #060606;
 	text-decoration: underline;
 	font-size: 19px;
+  line-height: 40px;
 }
 
 /* Styling for counter */
@@ -205,8 +214,3 @@ div#login #player_email_input {
   line-height: 30px;
 }
 
-#instruction_box img {
-  padding-left: 15px;
-  margin-top: -30px;
-  background-color: #FFFFFF;
-}
