Anna/Liz #12: implemented report for questions answered correctly on first attempt

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,3 +1,4 @@
-<h1>Report</h1>
+<h1>Reports</h1>
 
-<%= link_to "Player report", reports_download_path, {:class => "download_link"} %>
+<%= link_to "Player report", reports_players_path, {:class => "players_link"} %><br/>
+<%= link_to "Questions answered correctly on first attempt report", reports_answered_correctly_path, {:class => "answered_correctly_link"} %>
