ps: do not display incorrect answered questions. display only the score instead

--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -5,7 +5,7 @@
 <div id="questions"> </div>
 
 <div id="win" class="alert-message block-message success">
-  
+
 <span class="result">You win!</span>
   <img src="/assets/happy_face.png"  align='middle' />
 <div>
@@ -15,17 +15,11 @@
 </div>
 
 <div id="lose" class="alert-message block-message error">
-  	
 	<span class="result">Sorry, you didn't win this time.</span>
 	<img src="/assets/sad_face.png" align='middle' />
-	
-<div id="incorrect_questions">
-    <p>The correct answers:</p>
-  </div>
-
-
-  
+  <p id='lose_result'></p>
 </div>
+
 <div id="alert-actions" class="clearfix">
 	<div class="center">
     <a class="btn small play" href="#">Play again</a>
