--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -4,7 +4,7 @@
     <%= f.input :last_name %>
     <%= f.input :email, :as => :email %>
     <%= f.input :mobile_number %>
-    <%= f.input :city, :as => :select, :collection => PlayerHelper::cities, :include_blank => false %>
+    <%= f.input :city %>
     <%= f.input :company_name %>
     <%= f.input :role, :as => :select, :collection => PlayerHelper::roles, :include_blank => false%>
     <%= f.actions do %>
