keeping the center instruction container div

--- a/app/views/welcome/welcome.html.erb
+++ b/app/views/welcome/welcome.html.erb
@@ -1,4 +1,6 @@
 <div>
+  <div id="instruction_box" class="center">
+  </div>
   <div class="button_at_middle">
     <%= link_to 'Register to play', new_player_path, {:class => 'btn large'} %>
   </div>
