Revert "Merge branch 'master' of heroku.com:trivia-app"
This reverts commit a68f0c4de74ff53f0d323f55ffbe5e3373bd41ff, reversing
changes made to 8faa8120a19988dc15a3583cc850a44dfff660cf.

--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -9,6 +9,7 @@
 <span class="result">You win!</span>
   <img src="/assets/happy_face.png"  align='middle' />
 <div>
+  <p>Please contact a ThoughtWorker to collect your prize.</p>
   <p id="leaderboard-position"></p>
 </div>
 </div>
