Updates 'win message'

--- a/app/views/qa/index.html.erb
+++ b/app/views/qa/index.html.erb
@@ -6,7 +6,7 @@
 
 <div id="win" class="alert-message block-message success">
 
-<span class="result">You win!</span>
+<span class="result">You win. Contact a TWer to know about prizes!</span>
   <img src="/assets/happy_face.png"  align='middle' />
 <div>
   <p>Please contact a ThoughtWorker to collect your prize.</p>
